--- a/app/styles/globalstyles.css
+++ b/app/styles/globalstyles.css
@@ -19,6 +19,11 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
+.bolder_subtext {
+  font-weight: bolder;
+  font-family: "Fredoka", sans-serif;
+  font-size: 18px;
+}
 .hover_item:hover {
   outline: 3px solid #8a64f3;
 }
@@ -26,4 +31,10 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (min-width: 1000px) {
+  .bolder_subtext, p {
+    font-size: 16px;
+  }
 }
