--- a/app/styles/globalstyles.css
+++ b/app/styles/globalstyles.css
@@ -5,6 +5,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+body{
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 h2,
 h3 {
   font-family: "Fredoka", sans-serif;
